# self-growth-app

./: CHANGELOG.md  CLAUDE.md  README.md  VISION.md
app/: README.md  index.html  package.json  pnpm-lock.yaml
app/src/: i18n.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 009_bwoc_migration.sql
app/src-tauri/src/: bwoc.rs  db.rs  lib.rs  store.rs
app/src-tauri/src/commands/: ai.rs  health.rs  ocr.rs  rag.rs  settings.rs  story.rs
app/src/components/layout/: AppShell.tsx
app/src/locales/: en.ts  th.ts
app/src/locales/pages/: chat.ts  checkups.ts  dashboard.ts  getstarted.ts  goals.ts  habits.ts  health.ts  journal.ts  learning.ts  ledger.ts  notfound.ts  routines.ts  search.ts  skills.ts  stories.ts  story.ts  todos.ts
app/src/pages/: Chat.tsx  Checkups.tsx  Dashboard.tsx  GetStarted.tsx  Goals.tsx  Habits.tsx  Health.tsx  Journal.tsx  Learning.tsx  Ledger.tsx  NotFound.tsx  Routines.tsx  Search.tsx  Settings.test.tsx  Settings.tsx  Skills.tsx  Stories.tsx  Story.tsx  Todos.tsx
app/src/styles/: globals.css
app/src/test/: setup.ts
